[package]
authors = ["0xd34d10cc <0xd34d10cc@gmail.com>"]
description = "Modular arithmetic integer"
repository = "https://github.com/0xd34d10cc/modint"
homepage = "https://github.com/0xd34d10cc/modint"
documentation = "https://docs.rs/modint"
readme = "README.md"
keywords = ["mathematics", "numerics"]
license = "MIT"
name = "modint"
version = "0.1.1"


[dependencies]
num-traits = "0.1.41"
typenum = "1.9.0"
